;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-1.4.5:
  * enhancement: DISASSEMBLE on a symbol naming a macro will disassemble
    the expander, not the code that traps attempted FUNCALL of the macro.

changes in sbcl-1.4.5 relative to sbcl-1.4.4:
  * minor incompatible change: building with/without the :sb-package-locks
    feature is no longer an option. Package locks are always compiled in,
    and removing :sb-package-locks from *features* will have no effect.
  * enhancement: FIND-PACKAGE does not acquire a mutex
  * enhancement: cheneygc can perform heap relocation on startup
  * enhancement: in threaded builds, finalizers execute in a system-internal
    thread so that a user thread which invokes GC is unblocked from performing
    work as soon it returns from GC and invokes any post-GC hooks.
    As such, it is more important than before to avoid assumptions about
    special variable bindings in finalizers, even in single-threaded code.
  * optimization: faster (funcall (or function symbol)) on x86-64.

changes in sbcl-1.4.4 relative to sbcl-1.4.3:
  * bug fix: pathname accessors such as PATHNAME-DIRECTORY work on
    SYNONYM-STREAMs.
  * bug fix: (pathname-{device,directory,name,type} ... :case :common) works
    as expected. In particular MAKE-PATHNAME composed with the accessors
    roundtrips properly when both use the same :case. (lp#1739906)
  * bug fix: DIRECTORY no longer gets confused when the value of
    *DEFAULT-PATHNAME-DEFAULTS* has a name or type component. (lp#1740563)
  * bug fix: pattern pieces in pathname components are correctly escaped
    during unparsing.
  * bug fix: DELETE-DIRECTORY no longer signals an error when the directory is
    supplied as a pathname with name and/or type components containing escaped
    characters. (lp#1740624)
  * bug fix: weak hash-tables no longer cause GC time to scale superlinearly
    (lp#1241771)
  * bug fix: CANCEL-FINALIZATION operates in approximately constant time