@@ -135,6 +135,12 @@ depth of more than two levels is only supported on x86 and x86-64.
 
 @subsection Functions
 
+@include fun-sb-sprof-map-traces.texinfo
+
+@include fun-sb-sprof-map-trace-samples.texinfo
+
+@include fun-sb-sprof-map-all-samples.texinfo
+
 @include fun-sb-sprof-report.texinfo
 
 @include fun-sb-sprof-reset.texinfo
